--- a/styles.css
+++ b/styles.css
@@ -32,9 +32,9 @@ main {
 .todo-list-section {
     margin: 0.8rem 0 1.6rem;
     min-height: 5rem;
-
+ 
     & > ul {
-        padding-inline-start: orem;
+        padding-inline-start: 0rem;
         height: 23rem;
         overflow: auto;
     }
@@ -80,5 +80,47 @@ main {
 
     & > input {
         cursor: pointer;
+    }
+}
+
+#create-todo-section {
+    width: 100%;
+}
+
+#create-todo-form {
+    font-size: 1.6rem;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+.input-description {
+    height: 3.2rem;
+    width: 100%;
+    font-size: 1.6rem;
+    border-radius: .4rem;
+    margin-right: .4rem;
+    outline: 0;
+    border: 1px solid #646464;
+    padding-left: .8rem;
+
+    &:focus {
+        border: 1px solid #5ed7f6;
+    }
+}
+
+.add-task-btn {
+    box-sizing: border-box;
+    height: 3.6rem;
+    width: 3.6rem;
+    color: #fff;
+    background: #8f49e7;
+    border: none;
+    border-radius: .4rem;
+    font-size: 2.4rem;
+    cursor: pointer;
+
+    &:hover {
+        opacity: .8;
     }
 }
